v2: agregar logo provisorio y favicon

--- a/clima.html
+++ b/clima.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/img/fav-1.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Esquia conmigo | Clima</title>
 </head>
@@ -11,7 +12,9 @@
     <header>
         <nav class="top-nav">
             <div>
-                ECMG
+                <a href="./index.html">
+                    <img id="logo" src="./assets/img/logo-1.png" alt="logo esquia conmigo">
+                </a>
             </div>
             <input id="menu-toggle" type="checkbox" />
             <label class='menu-button-container' for="menu-toggle">
