--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/img/fav-1.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Esquia conmigo | Miguel Frugoni. Instructor de esquí. Ski instructor. Chapelco. </title>
 </head>
@@ -13,7 +14,7 @@
     <header>
         <nav class="top-nav">
             <div>
-                ECMG
+                <img id="logo" src="./assets/img/logo-1.png" alt="logo esquia conmigo">
             </div>
             <input id="menu-toggle" type="checkbox" />
             <label class='menu-button-container' for="menu-toggle">
