v3: cambio de logo foto y estilos

--- a/clima.html
+++ b/clima.html
@@ -13,7 +13,7 @@
         <nav class="top-nav">
             <div>
                 <a href="./index.html">
-                    <img id="logo" src="./assets/img/logo-1.png" alt="logo esquia conmigo">
+                    <img id="logo" src="./assets/img/titulo-1.png" alt="logo esquia conmigo">
                 </a>
             </div>
             <input id="menu-toggle" type="checkbox" />
