--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <header>
         <nav class="top-nav">
             <div>
-                <img id="logo" src="./assets/img/logo-1.png" alt="logo esquia conmigo">
+                <img id="logo" src="./assets/img/titulo-1.png" alt="logo esquia conmigo">
             </div>
             <input id="menu-toggle" type="checkbox" />
             <label class='menu-button-container' for="menu-toggle">
                 <div class='menu-button'></div>
             </label>
             <ul class="menu">
-                <li><a href="">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="">Sobre mi</a></li>
-                <li><a href="">Clases</a></li>
+                <li><a href="https://www.escuela.chapelco.com/">Clases</a></li>
                 <li><a href="">Fotos</a></li>
                 <li><a href="">Contacto</a></li>
                 <li><a href="./clima.html">Clima</a></li>
