--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </div>
             </a>
     
-            <a href="tel:5492944394801">
+            <a href="tel:+5492944518797">
                 <div class="card">
                     <div class="card-icon">
                         <i class="fa-solid fa-mobile-screen-button fa-2xl"></i>
